fixed some vertical spacing on pages. Changed the title in about us and the titles in mobile for categories in menupage.

--- a/client/src/components/ProfileOrderList/profileOrderList.css
+++ b/client/src/components/ProfileOrderList/profileOrderList.css
@@ -2,7 +2,7 @@
     grid-column: 1 / span 2;
     grid-row: 2;
     display: grid;
-    gap: var(--font-size-l);
+    gap: var(--spacing-l);
     background-color: var(--bg-primary);
 }
 
